完善fdfs操作接口

--- a/springboot-fastdfs/src/main/resources/application.properties
+++ b/springboot-fastdfs/src/main/resources/application.properties
@@ -1,8 +1,1 @@
-##pic upload
-##fdfs.soTimeout=1500
-##fdfs.connectTimeout=600
-###pic thumb
-##fdfs.thumbImage.width=210
-##fdfs.thumbImage.height=210
-###ip:port
-##fdfs.trackerList[0]=120.79.246.239:22122
+server.port=80
