--- a/springboot-docker/pom.xml
+++ b/springboot-docker/pom.xml
@@ -6,7 +6,7 @@
     <groupId>com</groupId>
     <artifactId>springboot-docker</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <packaging>jar</packaging>
+    <packaging>war</packaging>
 
     <name>springboot-docker</name>
     <description>Demo project for Spring Boot</description>
