--- a/springboot-export/pom.xml
+++ b/springboot-export/pom.xml
@@ -6,7 +6,7 @@
     <groupId>com.export</groupId>
     <artifactId>springboot-export</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <packaging>jar</packaging>
+    <packaging>war</packaging>
 
     <name>springboot-export</name>
     <description>Demo project for Spring Boot</description>
