--- a/springboot-fastdfs/pom.xml
+++ b/springboot-fastdfs/pom.xml
@@ -42,6 +42,17 @@
             <version>1.26.2</version>
         </dependency>
 
+        <!--swagger2在线文档-->
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger2</artifactId>
+            <version>2.6.1</version>
+        </dependency>
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger-ui</artifactId>
+            <version>2.6.1</version>
+        </dependency>
     </dependencies>
 
     <build>
